--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,12 +3,15 @@
 }
 
 body {
-    font-family: "Open Sans",
+    font-family: "Roboto",
     sans-serif; 
     font-size: 20px;
     color: #444;
     text-align: center;
     line-height: 1.5;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
   }
 
   
@@ -17,7 +20,7 @@ body {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    background-color: darkgray;
+    background-color: #0D64AD;
     color: #fff;
     overflow: hidden;
     position: fixed;
@@ -31,37 +34,67 @@ body {
     color: white;
     text-align: center;
     padding: 14px 16px;
+    font-size: 0.75em;
 }
 
 .main-nav li:hover {
     background-color: black;
 }
 
+.container {
+    margin-bottom: 20%;
+}
+
 .main-header {
     margin: 0 auto;
     text-align: center;
     padding: 5%;
+    margin-top: 3%;
+    border-bottom: 1px inset lightgrey;
+}
+
+.header-logo {
+    font-family: "Baloo Da 2", cursive;
+    font-size: 2em;
+    color: #E51F1B;
+}
+
+.wizard-icon {
+    height: 100px;
+    
 }
 
 section {
     min-height: 200px;
     padding: 6% 0;
-    background-color: #bbb;
+    background-color: #fff;
+    border-bottom: 1px inset lightgrey;
+    margin: 0 auto;
+    padding: 5%;
   }
   
-section:nth-child(even) {
-background-color: #ddd;
-}
+
 
 .main-footer {
-    background-color: darkgray;
+    background-color: #0D64AD;
     color: white;
-    margin-top: -20px;
+    margin-top: 10%;
     width: 100%;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    text-align: center;
+    height: 35px;
+    font-size: 10px;
+}
+
+.main-footer a {
+    color: #fff;
+    text-decoration: none;
 }
 
 .signup-button, .general-button {
-    background-color: black; /* Green */
+    background-color: #0D64AD; /* Green */
     border: none;
     color: white;
     padding: 15px 32px;
@@ -69,6 +102,9 @@ background-color: #ddd;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    margin-bottom: 3px;
+    margin-right: 3px;
+    margin-left: 15px;
   }
 
   .signup-button:hover, .general-button:hover {
@@ -77,9 +113,7 @@ background-color: #ddd;
     cursor: pointer;
   }
 
-.general-button{
-    margin-right: 5px;
-}
+
 
 .directions {
     width: 60%;
@@ -95,11 +129,18 @@ label {
 input, textarea {
     width: 100%;
     max-width: 500px;
+    border: 1px solid lightgrey;
   }
 
 form {
 text-align: left;
 padding-left: 20px;
+margin: 0 auto;
+width: 65%;
+}
+
+textarea {
+    height: 100px;
 }
 
 
@@ -107,15 +148,12 @@ padding-left: 20px;
     padding: 15px;
 }
 
-div.checkboxes checkbox {
-    margin-left: 50px;
-    display: flex;
-    justify-content: flex-start;
+select {
+    background-color: lightgrey;
 }
 
-
-div.checkboxes input {
-    max-width: 100px;
+.block-label {
+    display: block;
 }
 
 .search-result ul {
@@ -135,32 +173,14 @@ div.checkboxes input {
     width: 80px;
     font-size: 0.6em;
     padding: 5px;
+    
 }
 
 .input-number {
     width: 40px;
 }
 
-/* Modal Styles */
 
-.modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.6);
-}
-
-.modal-main {
-    position: fixed;
-    background: white;
-    width: 80%;
-    height: auto;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
 
 .display-block {
     display: block;
@@ -182,4 +202,9 @@ div.checkboxes input {
     font-weight: bold;
     font-size: 24px;
     margin-top: 300px;
+}
+
+.record-title {
+    color: #E51F1B;
+    
 }
