--- a/src/components/App.css
+++ b/src/components/App.css
@@ -50,6 +50,7 @@ body {
     text-align: center;
     padding: 5%;
     margin-top: 3%;
+    margin-bottom: -10%;
     border-bottom: 1px inset lightgrey;
 }
 
@@ -121,6 +122,7 @@ section {
     padding-bottom: 20px;
 }
 
+/* Form Styles */
 label {
     font-weight: bold;
     margin-right: 5px;
@@ -156,6 +158,12 @@ select {
     display: block;
 }
 
+.input-number {
+    width: 40px;
+}
+
+/*Search Result Styles */
+
 .search-result ul {
     list-style-type: none;
 }
@@ -175,11 +183,6 @@ select {
     padding: 5px;
     
 }
-
-.input-number {
-    width: 40px;
-}
-
 
 
 .display-block {
