--- a/src/components/App.css
+++ b/src/components/App.css
@@ -34,7 +34,7 @@ body {
     color: white;
     text-align: center;
     padding: 14px 16px;
-    font-size: 0.75em;
+    font-size: 1rem;
 }
 
 .main-nav li:hover {
@@ -56,7 +56,7 @@ body {
 
 .header-logo {
     font-family: "Baloo Da 2", cursive;
-    font-size: 2em;
+    font-size: 3rem;
     color: #E51F1B;
 }
 
@@ -179,7 +179,7 @@ select {
 .small-button {
     height: 40px;
     width: 80px;
-    font-size: 0.6em;
+    font-size: 0.8rem;
     padding: 5px;
     
 }
